--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,9 +67,8 @@ http {
     listen 80;
 		server_name localhost 127.0.0.1;
 
-    location /pihole {
+    location / {
       proxy_pass http://pihole:80;
-      proxy_redirect off;
     }
 
 }	
