--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,7 +68,7 @@ http {
 		server_name localhost 127.0.0.1;
 
     location / {
-      proxy_pass http://pihole:80;
+      proxy_pass http://adguard:80;
     }
 
 }	
